@@ -3,6 +3,7 @@
                               KijiSchema Release Notes
 
 Version 1.3.0
+  * SCHEMA-485. Add profiling pointcuts for HBase reads/writes.
   * SCHEMA-514. DeleteTool correctly formats the delete confirmation message
       when deleting all entries from a cell.
 
